# nonebot_plugin_dice_narrator

./: .env  .gitignore  README.md  pyproject.toml  run_bot.py
.github/workflows/: commit.yml  install.yml  publish.yml
nonebot_plugin_dice_narrator/: __init__.py  config.py  matchers.py  narrator.py
nonebot_plugin_dice_narrator/utils/: common.py  message_parse.py  openai_funcs.py
